--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "files": [
     "dist"
   ],
+  "keywords": [
+    "devtools",
+    "webpack",
+    "webpack-cli",
+    "cli-color",
+    "typescript",
+    "react"
+  ],
   "scripts": {
     "build": "npm-run-all clean compile",
     "clean": "rm -rf ./dist",
@@ -41,8 +49,6 @@
     "ts-loader": "^9.4.4",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-node-externals": "^3.0.0",
-    "webpackbar": "^5.0.2"
+    "webpack-node-externals": "^3.0.0"
   }
 }
