--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "files": [
     "dist"
   ],
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
+  },
   "keywords": [
     "devtools",
     "webpack",
@@ -20,6 +24,7 @@
     "compile": "tsc",
     "lint": "eslint --ext .tsx,.ts ./src/**",
     "lint:fix": "eslint --ext .tsx,.ts ./src/**",
+    "test": "jest --verbose",
     "prepublishOnly": "npm run lint && npm run build",
     "versioning": "./publish.sh"
   },
@@ -27,15 +32,9 @@
   "license": "MIT",
   "devDependencies": {
     "@types/cli-color": "^2.0.3",
-    "@types/file-loader": "^5.0.2",
+    "@types/jest": "^29.5.5",
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-node-externals": "^3.0.1",
-    "npm-run-all": "^4.1.5",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "cli-color": "^2.0.3",
-    "css-loader": "^6.8.1",
     "eslint": "^8.48.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.1.0",
@@ -44,9 +43,14 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "html-webpack-plugin": "^5.5.3",
+    "jest": "^29.7.0",
+    "npm-run-all": "^4.1.5",
+    "ts-jest": "^29.1.1",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "cli-color": "^2.0.3",
     "path-browserify": "^1.0.1",
-    "ts-loader": "^9.4.4",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-node-externals": "^3.0.0"
