--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jest": "^29.7.0",
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
